src/index.scss
/* ... */
// ========================================================================
// Messages
// ========================================================================
.toast {
  background-color: vars.$success-color;
  padding: vars.$spacing-unit-large * 2 vars.$spacing-unit-large * 4;
  color: vars.$background-color;
  border-radius: vars.$radius-full;
  left: 50%;
  transform: translateX(-50%);
  bottom: vars.$spacing-unit-large * 8;
  position: fixed;
  z-index: 1000;
  animation: fadeOut 4s forwards;
  text-align: center;

  &.success {
    background-color: vars.$success-color;
  }

  &.error {
    background-color: vars.$error-color;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  90% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

// ========================================================================
// Audio Visualizer
// ========================================================================
.visualizer-container {
  max-width: 885px;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.audio-visualizer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-top: vars.$spacing-unit-large * 4;
}

.audio-bar {
  width: vars.$spacing-unit-small;
  height: vars.$spacing-unit-large * 9;
  background-color: var(--audio-bar-color);
  border-radius: vars.$radius-m;
  transition: height 0.3s ease, background-color 0.3s ease;

  &:first-child,
  &:last-child {
    height: vars.$spacing-unit-large * 15;
    width: vars.$spacing-unit-small * 2;
  }
}

.audio-center {
  background-color: vars.$information-color;
  border-radius: vars.$radius-full;
  font-size: vars.$spacing-unit-large * 5;
  color: vars.$background-color;
  overflow: hidden;
  padding: vars.$spacing-unit-large * 5 vars.$spacing-unit-large * 3;
  max-width: vars.$spacing-unit-large * 4;

  &.active {
    background-color: vars.$information-color;
  }

  img {
    max-width: 100%;
    max-height: 100%;
  }
}
.audio-labels {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 885px;
  font-size: vars.$spacing-unit-large * 3;
  opacity: 50%;
  padding-top: vars.$spacing-unit-large * 4;

  .too-low {
    text-align: left;
  }

  .too-high {
    text-align: right;
  }
}
// ========================================================================
// Others
// ========================================================================
.hidden {
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
}

// ========================================================================
// Responsive Design
// ========================================================================
@media (max-width: vars.$breakpoint-tablet) {
  nav,
  header {
    flex-wrap: wrap;
  }

  header {
    gap: vars.$spacing-unit-large;
  }

  html {
    padding: 0 vars.$global-pd-tablet;
  }

  h1 {
    font-size: vars.$spacing-unit-large * 4;
    padding-top: vars.$spacing-unit-large * 6;
  }

  h3 {
    font-size: vars.$spacing-unit-small * 10;
  }

  .modal-content {
    margin: vars.$spacing-unit-large * 2;
  }
}

@media (max-width: vars.$breakpoint-mobile) {
  html {
    padding: 0 vars.$global-pd-mobile;
  }

  header img {
    max-height: vars.$spacing-unit-large * 4;
  }

  nav a {
    font-size: vars.$spacing-unit-small * 6;
    padding: vars.$spacing-unit-large vars.$spacing-unit-large * 2;
  }

  h1,
  h2 {
    font-size: vars.$spacing-unit-large * 3;
    line-height: vars.$lineheight-m;
  }

  h3 {
    font-size: vars.$spacing-unit-small * 9;
  }

  .manual-tuner .tone-lines .tone-line .tone-button {
    font-size: vars.$spacing-unit-large * 4;
    padding: vars.$spacing-unit-small * 9 vars.$spacing-unit-large * 2;
  }

  .manual-tuner .tone-lines {
    gap: vars.$spacing-unit-large * 4;
  }

  .manual-tuner .tone-lines .tone-line::before,
  .manual-tuner .tone-lines .tone-line::after {
    width: vars.$spacing-unit-small;
  }

  .manual-tuner .tone-lines .tone-line::before {
    height: vars.$spacing-unit-large * 6;
  }

  .manual-tuner .tone-lines .tone-line::after {
    height: vars.$spacing-unit-large * 16;
  }

  .modal-content {
    padding: vars.$spacing-unit-large * 8 vars.$spacing-unit-large * 5
      vars.$spacing-unit-large * 8;
  }

  .modal-close {
    top: 0;
    right: 0;
  }

  .audio-labels {
    font-size: vars.$spacing-unit-small * 9;
    padding-top: vars.$spacing-unit-large * 2;
  }

  .audio-center img {
    max-height: vars.$spacing-unit-small * 11;
  }

  button#secondary {
    margin-bottom: vars.$spacing-unit-large * 5;
    margin-top: vars.$spacing-unit-small * 6;
    font-size: vars.$spacing-unit-small * 6;
  }

  .audio-center {
    width: vars.$spacing-unit-large * 7;
    height: vars.$spacing-unit-large * 10;
    font-size: vars.$spacing-unit-large * 4;
  }

  .toast {
    left: 0%;
    transform: translateX(-0%);
    margin-left: vars.$spacing-unit-large * 2;
    margin-right: vars.$spacing-unit-large * 2;
  }

  .audio-bar {
    width: 1px;

    &:first-child,
    &:last-child {
      width: vars.$spacing-unit-small;
    }
  }
}

